--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: A sleek, modern Jekyll theme for personal websites.
-description: A sleek, modern Jekyll theme for personal websites. Personal is the perfect theme for developers, designers and other creatives.
+title: Project Portfolio by Josef A. Moosholzer
+description: Data Analytics projects in Python, SQL and Tableau. Maybe a blog post from time to time...
 featured_image: /images/demo/home.jpg
 ---
 
@@ -13,9 +13,8 @@ featured_image: /images/demo/home.jpg
 
 	<div class="wrap">
 
-		<h1>A sleek, modern Jekyll theme
-		for personal websites</h1>
-		<p>Personal is the perfect theme for developers, designers and other creatives.</p>
+		<h1>Discover my Project Portfolio or read my Blog.</h1>
+		<p>Data Analytics projects in Python, SQL and Tableau. Maybe a blog post from time to time...</p>
 
 		{% include socials.html %}
 
