--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ featured_image: /images/demo/home.jpg
 
 	<div class="wrap">
 
-		<h1>Discover my project portfolio or check out my blog.</h1>
-		<p>Data Analytics projects in Python, SQL and Tableau. And maybe a blog post from time to time...</p>
+		<h1>Discover my Project Portfolio or check out my blog.</h1>
+		<p>This is my personal GitHub Page where you can find various Data Analytics projects in Python, SQL and Tableau. And maybe a blog post from time to time...</p>
 
 		{% include socials.html %}
 
