--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Project Portfolio by Josef A. Moosholzer
 description: Data Analytics projects in Python, SQL and Tableau. Maybe a blog post from time to time...
-featured_image: /images/demo/home.jpg
+featured_image: /images/Seppi_in_Forest.jpg
 ---
 
 <section class="hero">
