--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 layout: default
 title: Page Not Found
 description: Sorry – the page your looking for doesn't exist.
-featured_image: /images/demo/about.jpg
+featured_image: /images/Forest_Path.jpg
 ---
 
 <section class="hero">
@@ -13,9 +13,9 @@ featured_image: /images/demo/about.jpg
 
 	<div class="wrap">
 
-		<h1>Page not found.</h1>
+		<h1>This path is leading nowhere...</h1>
 		<p class="hero__text editable">Sorry – the page your looking for doesn't exist.</p>
-		<p class="hero__text editable">Perhaps you typed the URL incorrectly, or it may have moved.</p>
+		<p class="hero__text editable">Perhaps you typed the URL incorrectly, or it may have been moved.</p>
 		<p><a href="/" class="button button--large">Back To Home</a></p>
 
 	</div>
